[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctwin32"
description = "Access selected win32 APIs through ctypes"
authors = [{name = "Rocco Matano"}]
requires-python = ">=3.6"
license = {text = "MIT License"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Operating System :: Microsoft :: Windows",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    ]
dynamic = ["version", "readme"]

[project.urls]
homepage = "https://github.com/RoccoMatano/ctwin32"
changelog = "https://github.com/RoccoMatano/ctwin32/blob/master/changelog.md"

[tool.setuptools]
packages = ["ctwin32"]

[tool.setuptools.dynamic]
version = {attr = "ctwin32.version"}
readme = {file = ["README.md"], content-type = "text/markdown"}
